refactor: ♻️ move test compile to unique target